Fixed main-contianer overlap of aside between 950px-1500px

--- a/myPortfolio/src/dashboard-style.css
+++ b/myPortfolio/src/dashboard-style.css
@@ -341,9 +341,8 @@ body {
     }
 
     .main-container {
+      box-sizing: border-box;
       margin-block-end: 0em;
-      position: relative;
-      right: 3em;
       padding: 0em 1em;
     }
 
@@ -356,7 +355,12 @@ body {
       display: flex;
       margin: .5em 0em;
     }
+  }
 
-
+  @media (min-width: 1200px) {
+    .main-container {
+      position: relative;
+      right: 1.5em;
+    }
   }
 
